--- a/css/main.scss
+++ b/css/main.scss
@@ -3,11 +3,9 @@
 ---
 @charset "utf-8";
 
-
-
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-family: "freight-text-pro",Georgia,Cambria,"Times New Roman",Times,serif;
+$base-font-size:   22px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
